--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -18,84 +18,84 @@
     <form [formGroup]="userProfile" (ngSubmit)="SubmitUserProfile(userProfile.value)">
         <ion-row>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-input type="text" placeholder="{{setLanguage.User_Name}}" formControlName="name" pattern="[a-zA-Z][a-zA-Z ]+"></ion-input>
-                <span class="danger">*</span>
+                <ion-input type="text" style="top: 12% !important;" placeholder="{{setLanguage.User_Name}}" formControlName="name" pattern="[a-zA-Z][a-zA-Z ]+"></ion-input>
+                <i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('name').touched">
                   <span class="text-danger" *ngIf="userProfile.get('name').hasError('required')" title="Name is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>Name is required</span>
                 <span class="text-danger" *ngIf="userProfile.get('name').hasError('pattern')" title="Only Alphabets allowed"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Only Alphabets allowed</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-select formControlName="userType" class="margin0" placeholder="{{setLanguage.User_Type}}" required>
+                <ion-select formControlName="userType" class="margin0 select" placeholder="{{setLanguage.User_Type}}" required>
                     <ion-option *ngFor="let StackHoldersList of masterData.StackHolders" value={{StackHoldersList.StackHolderId}}>
                         {{StackHoldersList.StackHolderName}}</ion-option>
-                </ion-select><span class="danger">*</span>
+                </ion-select><i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('userType').touched">
                   <span class="text-danger" *ngIf="userProfile.get('userType').hasError('required')" title="User Type is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>User Type is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-select formControlName="gender" class="margin0" placeholder="{{setLanguage.Gender}}" required>
+                <ion-select formControlName="gender" class="margin0 select" placeholder="{{setLanguage.Gender}}" required>
                     <ion-option *ngFor="let genderList of masterData.Gender" value={{genderList.GenderId}}>
                         {{genderList.GenderName}}</ion-option>
                 </ion-select>
-                <span class="danger">*</span>
+                <i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('gender').touched">
                   <span class="text-danger" *ngIf="userProfile.get('gender').hasError('required')" title="Gender is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>Gender is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-datetime class="margin0" displayFormat="DD/MM/YYYY" placeholder="{{setLanguage.Date_of_Birth}}" min="1940-01-01" max="{{currentDate}}"   formControlName="dateOfBirth" class="dob_Calender"></ion-datetime>
+                <ion-datetime class="margin0" style="text-align: left !important;" displayFormat="DD/MM/YYYY" placeholder="{{setLanguage.Date_of_Birth}}" min="1940-01-01" max="{{currentDate}}"   formControlName="dateOfBirth" class="dob_Calender"></ion-datetime>
                 <ion-icon name="calendar" color="dark" item-right class="dob_Calender_icon"></ion-icon>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-select formControlName="oragType" class="margin0" placeholder="{{setLanguage.Orgnization_Type}}" required>
+                <ion-select formControlName="oragType" class="margin0 select" placeholder="{{setLanguage.Orgnization_Type}}" required>
                     <ion-option *ngFor="let OrganizationList of masterData.Organization" value={{OrganizationList.OrganizationId}}>
                         {{OrganizationList.OrganizationName}}</ion-option>
-                </ion-select><span class="danger">*</span>
+                </ion-select><i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('oragType').touched">
                   <span class="text-danger" *ngIf="userProfile.get('oragType').hasError('required')" title="Organization Type is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>Organization Type is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-select formControlName="preferdLanguage" placeholder="{{setLanguage.Preferd_Language}}" class="margin0" required>
+                <ion-select formControlName="preferdLanguage" placeholder="{{setLanguage.Preferd_Language}}" class="margin0 select" required>
                     <ion-option *ngFor="let preferdLanguageList of masterData.Languages" value={{preferdLanguageList.LanguageId}}>
                         {{preferdLanguageList.LanguageName}}</ion-option>
-                </ion-select><span class="danger">*</span>
+                </ion-select><i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('preferdLanguage').touched">
                   <span class="text-danger" *ngIf="userProfile.get('preferdLanguage').hasError('required')" title="Preferred Language Type is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>Preferred Language is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-select formControlName="country" class="margin0" placeholder="{{setLanguage.Country}}" required (ionChange)="chkCountry($event)">
+                <ion-select formControlName="country" class="margin0 select" placeholder="{{setLanguage.Country}}" required (ionChange)="chkCountry($event)">
                     <ion-option *ngFor="let countryList of masterData.Country" value={{countryList.CountryId}}>
                         {{countryList.CountryName}}</ion-option>
-                </ion-select><span class="danger">*</span>
+                </ion-select><i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('country').touched">
                   <span class="text-danger" *ngIf="userProfile.get('country').hasError('required')" title="Country is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>Country is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 class="countrychk">
-                <ion-select formControlName="state" class="margin0" placeholder="{{setLanguage.State}}" (ionChange)="getDistict($event)" required>
+                <ion-select formControlName="state" class="margin0 select" placeholder="{{setLanguage.State}}" (ionChange)="getDistict($event)" required>
                     <ion-option *ngFor="let getStateList of masterData.States" value={{getStateList.StateId}}>
                         {{getStateList.StateName}}</ion-option>
-                </ion-select><span class="danger">*</span>
+                </ion-select><i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('state').touched">
                   <span class="text-danger" *ngIf="userProfile.get('state').hasError('required')" title="State is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>State is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 class="countrychk">
-                <ion-select formControlName="district" class="margin0" placeholder="{{setLanguage.District}}" required>
+                <ion-select formControlName="district" class="margin0 select" placeholder="{{setLanguage.District}}" required>
                     <ion-option *ngFor="let GetDistricts of GetDistrictsByStateId" value={{GetDistricts.DistrictId}}>
                         {{GetDistricts.DistrictName}}</ion-option>
                 </ion-select>
-                <span class="danger">*</span>
+                <i class="fa fa-asterisk text-danger" slot="end"></i>
                 <span class="help-block" *ngIf="userProfile.get('district').touched">
                   <span class="text-danger" *ngIf="userProfile.get('district').hasError('required')" title="District is required"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>District is required</span>
                 </span>
             </ion-col>
             <ion-col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12>
-                <ion-input type="text" class="phone" pattern="[0-9]{1}[0-9]{9}" placeholder="{{setLanguage.Mobile_No}}" formControlName="mobile"></ion-input>
+                <ion-input type="text" style="bottom: 15% !important;"  pattern="[0-9]{1}[0-9]{9}" placeholder="{{setLanguage.Mobile_No}}" formControlName="mobile"></ion-input>
                 <span class="help-block" *ngIf="userProfile.get('mobile').touched">
                   <span class="text-danger" *ngIf="userProfile.get('mobile').hasError('pattern')" title="Only Numbers are allowed"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>Only Numbers are allowed</span>
                 </span>
