--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -17,13 +17,13 @@
     <div class="progress"></div>
 
     <!-- <div float-right (click)=changeLanguage(chooseLanguage)><img class="footer_language_icon" [src]="languageIcon"></div> -->
-    <div float-right>
+    <!-- <div float-right>
       <h5 class="font-dark" float-right>
         <ion-select placeholder="Language" class="langSelect" [(ngModel)]="lang" (ionChange)="changeLanguage($event)">
           <ion-option *ngFor="let lang of langOption" [value]="lang">{{ lang }}</ion-option>
         </ion-select>
       </h5>
-    </div>
+    </div> -->
     <ion-grid>
       <ion-row justify-content-center align-items-center class="height100">
         <ion-col col-12>
@@ -227,7 +227,7 @@
     <ion-grid class="dash_footer_Grid">
         <ion-row>
             <ion-col col-12>
-                <div> <img class="footer-img" src="assets/imgs/dashboard-icons/footer.png"></div>
+                <div> <img class="footer-img" src="assets/imgs/footerlogo.jpg"></div>
             </ion-col>
 
         </ion-row>
