--- a/src/pages/methods/methods.html
+++ b/src/pages/methods/methods.html
@@ -2,14 +2,14 @@
     <ion-navbar>
         <ion-row>
             <ion-col col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2 class="padding-horizontal" (click)="gotoDashboard();">
-                <img class="left_img_header" src="assets/imgs/back.png" height="35px" float-left>
+                <img class="left_img_header" src="assets/imgs/left-arrow.png" height="35px" float-left>
                 <!-- <ion-icon  name="md-arrow-round-back" (click)="gotoDashboard();"></ion-icon> -->
             </ion-col>
             <ion-col col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8 class="vertical_align_middle">
                 <ion-title text-center>{{setLanguage.Methods}}</ion-title>
             </ion-col>
             <ion-col col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2 class="padding-horizontal">
-                <img class="right_img_header" src="assets/imgs/pathfinder-icon-logo.png" float-right>
+                <img class="right_img_header" src="assets/imgs/menu-icon.png" float-right>
                 <!-- <ion-title float-right class="font-size-14" (click)=changeLanguage(chooseLanguage)>{{chooseLanguage}}</ion-title> -->
             </ion-col>
         </ion-row>
@@ -24,14 +24,14 @@
         </ion-col>
     </ion-row>
     <ion-row justify-content-center align-items-center class="height100">
-      <ion-col col6 class="height-100">
+      <ion-col col6 class="height-100" (click)="gotoTopicsListPageTest(1001)">
         <ion-card class="cl1 height100">
           <ion-card-content class="height100">
             <ion-row justify-content-center align-items-center class="height100">
               <ion-col col-12 class="height-100p">
                 <div class="cdiv">
                     <p>
-                        <img src="assets/imgs/counceling.png" class="img3" />
+                        <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                     </p>
                     <div class="txt-content">
                       <span float-left>DMPA</span>
@@ -52,7 +52,7 @@
                 <ion-col col-12 class="height-100p">
                   <div class="cdiv">
                       <p>
-                          <img src="assets/imgs/counceling.png" class="img3" />
+                          <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                       </p>
                       <div class="txt-content">
                         <span float-left>IUCD</span>
@@ -73,7 +73,7 @@
                 <ion-col col-12 class="height-100p">
                  <div class="cdiv">
                     <p>
-                        <img src="assets/imgs/counceling.png" class="img3" />
+                        <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                     </p>
                     <div class="txt-content">
                       <span float-left>COC</span>
@@ -94,7 +94,7 @@
                 <ion-col col-12 class="height-100p">
                  <div class="cdiv">
                     <p>
-                        <img src="assets/imgs/counceling.png" class="img3" />
+                        <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                     </p>
                     <div class="txt-content">
                       <span float-left>CENTCHROMAN</span>
@@ -115,7 +115,7 @@
               <ion-col col-12 class="height-100p">
                <div class="cdiv">
                   <p>
-                      <img src="assets/imgs/dashboard-icons/couselling-icon.png" class="img3" />
+                      <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                   </p>
                   <div class="txt-content">
                     <span float-left>CONDOM</span>
@@ -136,7 +136,7 @@
                 <ion-col col-12 class="height-100p">
                 <div class="cdiv">
                     <p>
-                        <img src="assets/imgs/dashboard-icons/couselling-icon.png" class="img3" />
+                        <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                     </p>
                     <div class="txt-content">
                       <span float-left>ECP</span>
@@ -161,17 +161,17 @@
           </ion-col>
       </ion-row>
       <ion-row justify-content-center align-items-center class="height100">
-          <ion-col col6 class="height-100">
+        <ion-col col6 class="height-100" (click)="gotoTopicsListPageTest(1001)">
             <ion-card class="cl7 height100">
               <ion-card-content class="height100">
                 <ion-row justify-content-center align-items-center class="height100">
-                  <ion-col col-12>
+                  <ion-col col-12 class="height-100p">
                     <div class="cdiv">
                         <p>
-                            <img src="assets/imgs/counceling.png" class="img3" />
+                            <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                         </p>
                         <div class="txt-content">
-                          <span float-left>MALE STERILIZATION</span>
+                          <span float-left>MALE</span>
                           <span float-right>
                               <ion-icon name="arrow-round-forward"></ion-icon>
                           </span>
@@ -182,17 +182,17 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col col-6 class="height-100" (click)="startDateTime('ContraceptiveMethods');">
+          <ion-col col6 class="height-100" (click)="gotoTopicsListPageTest(1001)">
               <ion-card class="cl8 height100">
                 <ion-card-content class="height100">
                   <ion-row justify-content-center align-items-center class="height100">
-                    <ion-col col-12>
+                    <ion-col col-12 class="height-100p">
                       <div class="cdiv">
                           <p>
-                              <img src="assets/imgs/counceling.png" class="img3" />
+                              <img src="assets/imgs/dashboard-icons/counceling.png" class="img3" />
                           </p>
                           <div class="txt-content">
-                            <span float-left>FEMALE STERILIZATION</span>
+                            <span float-left>FEMALE</span>
                             <span float-right>
                                 <ion-icon name="arrow-round-forward"></ion-icon>
                             </span>
@@ -202,7 +202,8 @@
                   </ion-row>
                 </ion-card-content>
               </ion-card>
-          </ion-col>
+            </ion-col>
+
       </ion-row>
     </ion-grid>
 </ion-content>
