--- a/src/pages/methods/methods.html
+++ b/src/pages/methods/methods.html
@@ -88,25 +88,25 @@
           </ion-card>
       </ion-col>
       <ion-col col-6 class="height-100">
-          <ion-card class="cl4 height100">
-            <ion-card-content class="height100">
-              <ion-row justify-content-center align-items-center class="height100">
-                <ion-col col-12 class="height-100p">
-                 <div class="cdiv">
-                    <p>
-                        <img src="assets/icon/Contraceptive_Methods/Centchroman.png" class="img3" />
-                    </p>
-                    <div class="txt-content">
-                      <span float-left>CENTCHROMAN</span>
-                      <span float-right>
-                          <ion-icon name="arrow-round-forward"></ion-icon>
-                      </span>
-                    </div>
-                 </div>
-                </ion-col>
-              </ion-row>
-            </ion-card-content>
-          </ion-card>
+        <ion-card class="cl5 height100">
+          <ion-card-content class="height100">
+            <ion-row justify-content-center align-items-center class="height100">
+              <ion-col col-12 class="height-100p">
+               <div class="cdiv">
+                  <p>
+                      <img src="assets/icon/Contraceptive_Methods/Centchroman.png" class="img3" />
+                  </p>
+                  <div class="txt-content">
+                    <span float-left>CENTCHROMAN</span>
+                    <span float-right>
+                        <ion-icon name="arrow-round-forward"></ion-icon>
+                    </span>
+                  </div>
+               </div>
+              </ion-col>
+            </ion-row>
+          </ion-card-content>
+        </ion-card>
       </ion-col>
       <ion-col col-6 class="height-100">
         <ion-card class="cl5 height100">
@@ -207,3 +207,13 @@
       </ion-row>
     </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-grid class="dash_footer_Grid">
+      <ion-row>
+          <ion-col col-12>
+              <div> <img class="footer-img" src="assets/imgs/footer2.png"></div>
+          </ion-col>
+
+      </ion-row>
+  </ion-grid>
+</ion-footer>
