--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -52,7 +52,7 @@
                           <ion-col col-12>
                             <div class="cdiv">
                                 <p>
-                                    <img src="assets/imgs/dashboard-icons/contra-icons.png" style="height: 31px !important;width: 31px !important;" />
+                                    <img src="assets/imgs/dashboard-icons/Contarceptive Methodt.png" style="height: 31px !important;width: 31px !important;" />
                                 </p>
                                 <p>CONTRACEPTIVE METHOD</p>
                             </div>
@@ -140,11 +140,14 @@
                     <ion-col col-6 class="colheight whiteImg">
                       <ion-grid class="whiteImg" class="height100">
                           <ion-row class="height100">
-                            <ion-col col-12 class="rowcolheight1">
+                            <!-- <ion-col col-12 class="rowcolheight1">
                                   <img class="height100" src="assets/imgs/dashboard-icons/Family planning app logo.png">
                             </ion-col>
                             <ion-col col-12 class="rowcolheight2">
                                   <img class="height100" src="assets/imgs/dashboard-icons/with support from.png">
+                            </ion-col> -->
+                            <ion-col col-12 class="rowcolheight3">
+                              <img class="height100" src="assets/imgs/home-mid-logo.png">
                             </ion-col>
                           </ion-row>
                       </ion-grid>
@@ -226,10 +229,22 @@
 <ion-footer>
     <ion-grid class="dash_footer_Grid">
         <ion-row>
-            <ion-col col-12>
-                <div> <img class="footer-img" src="assets/imgs/footerlogo.jpg"></div>
+            <ion-col col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 class="padding-horizontal" (click)="gotoDashboard();">
+              <img class="footer-img2" src="assets/imgs/footer21.png" float-right>
+              <!-- <ion-title float-right class="font-size-14" (click)=changeLanguage(chooseLanguage)>{{chooseLanguage}}</ion-title> -->
             </ion-col>
-
+            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 class="padding-horizontal" (click)="gotoDashboard();">
+              <img class="footer-img" src="assets/imgs/Bill and Melinda.png" float-right>
+              <!-- <ion-title float-right class="font-size-14" (click)=changeLanguage(chooseLanguage)>{{chooseLanguage}}</ion-title> -->
+            </ion-col>
+            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 class="padding-horizontal" (click)="gotoDashboard();">
+                <img class="footer-img" src="assets/imgs/20IPE-logo.jpg" float-right>
+                <!-- <ion-title float-right class="font-size-14" (click)=changeLanguage(chooseLanguage)>{{chooseLanguage}}</ion-title> -->
+            </ion-col>
+            <ion-col col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4 class="padding-horizontal" (click)="gotoDashboard();">
+                <img class="footer-img" src="assets/imgs/ciff.png" float-right>
+                <!-- <ion-title float-right class="font-size-14" (click)=changeLanguage(chooseLanguage)>{{chooseLanguage}}</ion-title> -->
+            </ion-col>
         </ion-row>
     </ion-grid>
 </ion-footer>
