--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -26,10 +26,10 @@
     </div> -->
     <ion-grid>
       <ion-row justify-content-center align-items-center class="height100">
-        <ion-col col-12>
+        <ion-col col-12 class="paddingbottom0">
             <ion-grid>
               <ion-row justify-content-center align-items-center class="height100">
-                <ion-col col-4 class="colheight80">
+                <ion-col col-4 class="colheight80" style="padding-left: 0 !important;">
                   <ion-card class="bgBlue height100">
                     <ion-card-content class="height100">
                       <ion-row justify-content-center align-items-center class="height100">
@@ -45,7 +45,7 @@
                     </ion-card-content>
                   </ion-card>
                 </ion-col>
-                <ion-col col-4 class="colheight80" (click)="startDateTime('ContraceptiveMethods');">
+                <ion-col col-4 class="colheight80 pp0" (click)="startDateTime('ContraceptiveMethods');">
                     <ion-card class="bgBlue height100">
                       <ion-card-content class="height100">
                         <ion-row justify-content-center align-items-center class="height100">
@@ -54,14 +54,14 @@
                                 <p>
                                     <img src="assets/imgs/dashboard-icons/Contarceptive Methodt.png" style="height: 31px !important;width: 31px !important;" />
                                 </p>
-                                <p>CONTRACEPTIVE METHOD</p>
+                                <p>CONTRACEPTIVE METHODS</p>
                             </div>
                           </ion-col>
                         </ion-row>
                       </ion-card-content>
                     </ion-card>
                 </ion-col>
-                <ion-col col-4 class="colheight80">
+                <ion-col col-4 class="colheight80" style="padding-right: 0 !important;">
                     <ion-card class="bgBlue height100">
                       <ion-card-content class="height100">
                         <ion-row justify-content-center align-items-center class="height100">
@@ -83,10 +83,10 @@
         <ion-col col-12>
             <ion-grid>
                 <ion-row>
-                    <ion-col col-3 class="colheight">
+                    <ion-col col-3 class="colheight paddingbottom0" style="width: 97% !important;">
                         <ion-grid class="height100">
-                          <ion-row class="height100">
-                            <ion-col col-12 class="rowcolheight">
+                          <ion-row class="height100" style="margin-right: 5% !important;">
+                            <ion-col col-12 class="rowcolheight paddingtop0">
                               <ion-card class="bgBlue cardwidth">
                                 <ion-card-content class="height100">
                                   <ion-row justify-content-center align-items-center class="height100">
@@ -102,7 +102,7 @@
                                 </ion-card-content>
                               </ion-card>
                             </ion-col>
-                            <ion-col col-12 class="rowcolheight">
+                            <ion-col col-12 class="rowcolheight pp1">
                                 <ion-card class="bgBlue cardwidth">
                                   <ion-card-content class="height100">
                                     <ion-row justify-content-center align-items-center class="height100">
@@ -152,10 +152,10 @@
                           </ion-row>
                       </ion-grid>
                     </ion-col>
-                    <ion-col col-3 class="colheight">
+                    <ion-col col-3 class="colheight" style="width: 97% !important;">
                       <ion-grid class="height100">
-                        <ion-row class="height100">
-                          <ion-col col-12 class="rowcolheight">
+                        <ion-row class="height100" style="margin-left: 5% !important;">
+                          <ion-col col-12 class="rowcolheight paddingtop0">
                               <ion-card class="bgBlue cardwidth">
                                 <ion-card-content class="height100">
                                   <ion-row justify-content-center align-items-center class="height100">
