--- a/src/pages/methods/methods.html
+++ b/src/pages/methods/methods.html
@@ -23,7 +23,7 @@
             <h4 class="txtalignstart" no-margin margin-top>SPACING</h4>
         </ion-col>
     </ion-row>
-    <ion-row justify-content-center align-items-center class="height100">
+    <ion-row justify-content-center align-items-center class="height100 colset">
       <ion-col col6 class="height-100" (click)="gotoTopicsListPageTest(1001)">
         <ion-card class="cl1 height100">
           <ion-card-content class="height100">
@@ -94,7 +94,7 @@
               <ion-col col-12 class="height-100p">
                <div class="cdiv">
                   <p>
-                      <img src="assets/icon/Contraceptive_Methods/Centchroman.png" class="img3" />
+                      <img src="assets/icon/Contraceptive_Methods/Centchroman.png" style="height: 70px !important;" class="img3" />
                   </p>
                   <div class="txt-content">
                     <span float-left>CENTCHROMAN</span>
@@ -136,7 +136,7 @@
                 <ion-col col-12 class="height-100p">
                 <div class="cdiv">
                     <p>
-                        <img src="assets/icon/Contraceptive_Methods/ECP.png" class="img3" />
+                        <img src="assets/icon/Contraceptive_Methods/ECP.png" style="height: 70px !important;" class="img3" />
                     </p>
                     <div class="txt-content">
                       <span float-left>ECP</span>
@@ -160,7 +160,7 @@
               <h4 class="txtalignstart" no-margin margin-top>LIMITING</h4>
           </ion-col>
       </ion-row>
-      <ion-row justify-content-center align-items-center class="height100">
+      <ion-row justify-content-center align-items-center class="height100 colset">
         <ion-col col6 class="height-100" (click)="gotoTopicsListPageTest(1001)">
             <ion-card class="cl7 height100">
               <ion-card-content class="height100">
@@ -168,10 +168,10 @@
                   <ion-col col-12 class="height-100p">
                     <div class="cdiv">
                         <p>
-                            <img src="assets/icon/Contraceptive_Methods/Male_Sterilization.png" class="img3" />
+                            <img src="assets/icon/Contraceptive_Methods/Male_Sterilization.png" class="img3" style="height: 80px !important;"/>
                         </p>
                         <div class="txt-content">
-                          <span float-left>MALE</span>
+                          <span float-left>Male Sterilization</span>
                           <span float-right>
                               <ion-icon name="arrow-round-forward"></ion-icon>
                           </span>
@@ -192,7 +192,7 @@
                               <img src="assets/icon/Contraceptive_Methods/Fimale_Stierilization.png" class="img3" />
                           </p>
                           <div class="txt-content">
-                            <span float-left>FEMALE</span>
+                            <span float-left>Female<br/>Sterilization</span>
                             <span float-right>
                                 <ion-icon name="arrow-round-forward"></ion-icon>
                             </span>
